namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-po-lin
  labels:
    environment: development
