backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: basic3tier-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
